# IrisDataTrain

./: .gitignore  Makefile  PROJECT_STRUCTURE.md  README.md  env.template  interactive_report.html  pyproject.toml  requirements.txt  setup.py
apps/: web_interface.py
docs/: ENTERPRISE_PIPELINE.md  TECHNICAL_REPORT.md
scripts/: advanced_ml_pipeline.py  check_dependencies.py  comprehensive_data_analysis.py  create_interactive_report.py  data_analysis_summary.py  demo_enterprise.py  demo_prediction.py  dependency_summary.py  launcher.py  legacy_train.py  run_enterprise_pipeline.py  save_visualizations.py
src/iris_pipeline/: __init__.py  enterprise_ml_pipeline.py
src/iris_pipeline/api/: __init__.py  server.py
src/iris_pipeline/config/: __init__.py  settings.py
src/iris_pipeline/data/: __init__.py  validation.py
src/iris_pipeline/features/: __init__.py  engineering.py
visualizations/: README.md
